--- a/AudioLibrary/pom.xml
+++ b/AudioLibrary/pom.xml
@@ -27,5 +27,20 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <author>true</author>
+                    <version>true</version>
+                    <failOnError>false</failOnError>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
